# m5-rs

./: .gitignore  Makefile  README.md  compile_flags.txt.in  configs.h  m5-rs.ino
server/: Makefile
server/m5rs/: pyproject.toml  serve.sh
server/m5rs/src/m5rs/: __init__.py  capture.py  worker.py
server/m5rs/test/: index.html
